// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filters bound 1`] = `
Operator {
  "args": Array [
    "{\\"componentType\\":\\"dimension\\",\\"iri\\":\\"http://example.com/d\\",\\"labels\\":[{\\"value\\":\\"d\\",\\"language\\":\\"\\"}]}",
  ],
  "operator": "bound",
}
`;

exports[`filters not bound 1`] = `
Operator {
  "args": Array [
    Operator {
      "args": Array [
        "{\\"componentType\\":\\"dimension\\",\\"iri\\":\\"http://example.com/d\\",\\"labels\\":[{\\"value\\":\\"d\\",\\"language\\":\\"\\"}]}",
      ],
      "operator": "bound",
    },
  ],
  "operator": "!",
}
`;

exports[`filters not in 1`] = `
Operator {
  "args": Array [
    "{\\"componentType\\":\\"dimension\\",\\"iri\\":\\"http://example.com/d\\",\\"labels\\":[{\\"value\\":\\"d\\",\\"language\\":\\"\\"}]}",
    ArrayExpr {
      "xs": Array [
        NamedNode {
          "value": "http://foo",
        },
      ],
    },
  ],
  "operator": "notin",
}
`;
